--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: DevBlog - Tomasz Wiernik
+title: Tomek & Sitecore
 subtitle:
 description:
-author: Tomek Wiernik
+author: Tomasz Wiernik
 language:
 timezone:
 
@@ -21,7 +21,7 @@ permalink_defaults:
 source_dir: source
 public_dir: public
 tag_dir: tags
-archive_dir: archives
+archive_dir: articles
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
@@ -32,13 +32,13 @@ new_post_name: :title.md # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
-filename_case: 0
+filename_case: 1
 render_drafts: false
 post_asset_folder: false
 relative_link: false
 future: true
 highlight:
-  enable: true
+  enable: false
   line_number: true
   auto_detect: false
   tab_replace:
@@ -51,6 +51,12 @@ index_generator:
   path: ''
   per_page: 10
   order_by: -date
+
+
+prism_plugin:
+  mode: 'preprocess'    # realtime/preprocess
+  theme: 'default'
+  line_number: false    # default false
   
 # Category & Tag
 default_category: uncategorized
@@ -72,7 +78,7 @@ pagination_dir: page
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: clexy
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
